loyhani bazi joylari togirlandi

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                 </div>
 
                 <div class="servisec-card">
-                    <img src="./images/website-illustration.png" alt="">
-                    <h5 class="card-title">Vebsayt tuzish</h5>
+                    <img src="./images/bot-illustration.png" alt="">
+                    <h5 class="card-title">Telegram bot</h5>
                     <p>Do not give-up</p>
                 </div>
 
                 <div class="servisec-card">
-                    <img src="./images/website-illustration.png" alt="">
-                    <h5 class="card-title">Vebsayt tuzish</h5>
+                    <img src="./images/smm-illustration.png" alt="">
+                    <h5 class="card-title">SMM</h5>
                     <p>Do not give-up</p>
                 </div>
             </div>
