--- a/xizmatlar/xizmatlar.html
+++ b/xizmatlar/xizmatlar.html
@@ -17,7 +17,7 @@
     <header id="header" class="header">
         <nav class="nav-container container">
             <a href="#" class="logo-pixer">
-                <img src="./images/pixer-logo (1).png" alt="">
+                <img src="../images/pixer-logo (1).png" alt="">
             </a>
             <div class="nav-menue__box">
                 <ul class="nav-menue">
@@ -84,26 +84,29 @@
                 </div>
 
                 <div class="services2-card">
-                    <img src="../images/website-illustration.png" alt="services2-img">  
+                    <img src="../images/bot-illustration.png" alt="services2-img">  
                     <div class="services2-card__description">
                       <h4 class="services2-card__title">Telegram bot tuzish</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus numquam illo eaque laudantium tenetur beatae?</p>
                     <ul class="services2-card__items">
                       <li class="services2-card__item">
-                          lending
+                          kontakt bot
                       </li>
                       <li class="services2-card__item">
-                          vizitka
+                          ballar yeg'ish
                       </li>
                       <li class="services2-card__item">
-                          korparativ
+                          yetgazib berish
                       </li>
                       <li class="services2-card__item">
-                          internet do'kon
+                          telegram oldi sotdi
                       </li>
                       <li class="services2-card__item">
-                          maxsus
+                          ovoz bilan ishlash
                       </li>
+                      <li class="services2-card__item">
+                        maxsus
+                    </li>
                     </ul>
                     <button class="services2-btn btn">Buyurtma berish</button>
                     <a href="#" class="services2-link">Batafsil malumot</a>
@@ -112,25 +115,25 @@
                   </div>
 
                   <div class="services2-card">
-                    <img src="../images/website-illustration.png" alt="services2-img">  
+                    <img src="../images/smm-illustration.png" alt="services2-img">  
                     <div class="services2-card__description">
                       <h4 class="services2-card__title">SMM</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus numquam illo eaque laudantium tenetur beatae?</p>
                     <ul class="services2-card__items">
                       <li class="services2-card__item">
-                          lending
+                          facebook
                       </li>
                       <li class="services2-card__item">
-                          vizitka
+                          instagram
                       </li>
                       <li class="services2-card__item">
-                          korparativ
+                          tik-tok
                       </li>
                       <li class="services2-card__item">
-                          internet do'kon
+                          reklamalarni sozlash
                       </li>
                       <li class="services2-card__item">
-                          maxsus
+                          aksiyalar uyushtirish
                       </li>
                     </ul>
                     <button class="services2-btn btn">Buyurtma berish</button>
@@ -140,22 +143,22 @@
                   </div>
 
                   <div class="services2-card">
-                    <img src="../images/website-illustration.png" alt="services2-img">  
+                    <img src="../images/design-illustration.png" alt="services2-img">  
                     <div class="services2-card__description">
                       <h4 class="services2-card__title">Grafik dizayn</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus numquam illo eaque laudantium tenetur beatae?</p>
                     <ul class="services2-card__items">
                       <li class="services2-card__item">
-                          lending
+                          logatib
                       </li>
                       <li class="services2-card__item">
-                          vizitka
+                          korparativ stil
                       </li>
                       <li class="services2-card__item">
-                          korparativ
+                          brending
                       </li>
                       <li class="services2-card__item">
-                          internet do'kon
+                          ijtimoyi tarmoqlar uchun posterlar
                       </li>
                       <li class="services2-card__item">
                           maxsus
@@ -168,22 +171,19 @@
                   </div>
 
                   <div class="services2-card">
-                    <img src="../images/website-illustration.png" alt="services2-img">  
+                    <img src="../images/crm-illustration.png" alt="services2-img">  
                     <div class="services2-card__description">
                       <h4 class="services2-card__title">CRM tizimlari</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus numquam illo eaque laudantium tenetur beatae?</p>
                     <ul class="services2-card__items">
                       <li class="services2-card__item">
-                          lending
+                          dokonlar va omborlar
                       </li>
                       <li class="services2-card__item">
-                          vizitka
+                          oshxona kafe restoran
                       </li>
                       <li class="services2-card__item">
-                          korparativ
-                      </li>
-                      <li class="services2-card__item">
-                          internet do'kon
+                          shaxsiy hisob kitoblar
                       </li>
                       <li class="services2-card__item">
                           maxsus
