bir necha joylar togirlandi

--- a/xizmatlar/xizmatlar.html
+++ b/xizmatlar/xizmatlar.html
@@ -222,10 +222,10 @@
                   <a href="#" class="social-media__link"><i class="fa-brands fa-telegram social-media__link"></i>Telegram</a>
               </li>
               <li class="social-media__item">
-                  <a href="#"><i class="fa-brands fa-facebook social-media__link"></i>Telegram</a>
+                  <a href="#"><i class="fa-brands fa-facebook social-media__link"></i>Facebook</a>
               </li>
               <li class="social-media__item">
-                  <a href="#"><i class="fa-brands fa-instagram social-media__link"></i>Telegram</a>
+                  <a href="#"><i class="fa-brands fa-instagram social-media__link"></i>Instagram</a>
               </li>
            </ul>
           </div>
