loyihaning menyu qismi yaxshilandi

--- a/index.html
+++ b/index.html
@@ -13,36 +13,56 @@
 </head>
 <body>
     <!-- HEADER START -->
-    <header id="header" class="header">
-        <nav class="nav-container container">
-            <a href="#" class="logo-pixer">
-                <img src="./images/pixer-logo (1).png" alt="">
-            </a>
-            <div class="nav-menue__box">
-                <ul class="nav-menue">
-                    <li class="nav-item">
-                        <a href="#"  class="nav__link">Bosh sahifa </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./xizmatlar/xizmatlar.html"  class="nav__link">Xizmatlar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"  class="nav__link">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"  class="nav__link">Jamoa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"  class="nav__link">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"  class="nav__link">Kontaktlar</a>
-                    </li>
-                </ul>
-                <button class="phone-btn btn">+998 99 009 42 21</button>
-            </div>
+    <header>
+        <a href="#">
+            <img src="./images/pixer-logo (1).png" alt="">
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">bosh sahifa</a>
+                </li>
+                <li>
+                    <a href="#">Xizmatlar &bigtriangledown;</a>
+                    <ul>
+                        <li>
+                            <a href="#">Veb sayt</a>
+                        </li>
+                        <li>
+                            <a href="#">Telegram bot</a>
+                        </li>
+                        <li>
+                            <a href="#">SMM</a>
+                        </li>
+                        <li>
+                            <a href="#">Grafik dizayn &bigtriangledown;</a>
+                            <ul>
+                                <li>
+                                    <a href="#">Mobilagrafiya</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">CRM</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#">Jamoa</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Kontaktlar</a>
+                </li>
+            </ul>
+            <button class="btn nav-btn">+998990094221</button>
         </nav>
-    </header>
+       </header>
     <!-- HEADER END -->
     <!-- MAIN START -->
     <main>
